--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -43,11 +43,23 @@
 
 @import 'util/util';
 
+// 0. Notizie Colors
+// ---------
+$notizie-pri-color-dark:   #616161;
+$notizie-pri-color:        #9e9e9e;
+$notizie-pri-color-light:  #f5f5f5;
+$notizie-pri-color-text:   #212121;
+$notizie-acc-color:         #9e9e9e;
+$notizie-pri-text-color:   #212121;
+$notizie-sec-text-color: #757575;
+$notizie-div-color:        #bdbdbd;
+
+
 // 1. Global
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: rem-calc(1200);//1200
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #1779ba,
@@ -60,8 +72,8 @@ $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
-$white: #fefefe;
-$body-background: $white;
+$white: #fdfffd;
+$body-background: $notizie-pri-color-light;//$white;
 $body-font-color: $black;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
@@ -71,7 +83,7 @@ $global-weight-normal: normal;
 $global-weight-bold: bold;
 $global-radius: 0;
 $global-text-direction: ltr;
-$global-flexbox: false;
+$global-flexbox: true;//false
 $print-transparent-backgrounds: true;
 
 @include add-foundation-colors;
