--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,7 +6,7 @@
 
 @include foundation-global-styles;
 @include foundation-grid;
-// @include foundation-flex-grid;
+@include foundation-flex-grid;
 @include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
@@ -49,3 +49,7 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+// Notizie Styles
+@import 'general';
+@import 'header';
