--- a/src/partials/notizie-header.html
+++ b/src/partials/notizie-header.html
@@ -35,6 +35,16 @@
 				<li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 			</ul>			
 		</div>
-	</div>	
+	</div>
+
+	<!-- Header Brand -->
+	<div class="hdr__brand">
+		<h1>
+			<a href="">
+				<img src="" alt="">
+				Notizie Post
+			</a>
+		</h1>
+	</div>
 
 </header>
