--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -424,6 +424,7 @@ $mediaobject-image-width-stacked: 100%;
 $menu-margin: 0;
 $menu-margin-nested: 1rem;
 $menu-item-padding: 0.7rem 1rem;
+$menu-item-padding-min: 0.2rem 0.4rem; //notizie
 $menu-item-color-active: $white;
 $menu-item-background-active: get-color(primary);
 $menu-icon-spacing: 0.25rem;
