--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -53,11 +53,18 @@
 		.hdr__social-icons{
 			@include grid-col;
 			@include breakpoint(small){
-				@include grid-col-size(6);
+				@include grid-col-size(3);
 			}
 			@include breakpoint(medium){
-				@include grid-col-size(6);
+				@include grid-col-size(3);
 			}
-
+			@include flex;
 		}
+	}
+
+//** Header Social (hdr__social)
+	.hdr__brand{
+		@include grid-column-row();	
+		@include flex;
+		@include flex-align(center);
 	}
