--- a/src/partials/notizie-header.html
+++ b/src/partials/notizie-header.html
@@ -37,14 +37,19 @@
 		</div>
 	</div>
 
-	<!-- Header Brand -->
+	<!-- Header Brand (hdr__brand) -->
 	<div class="hdr__brand">
-		<h1>
-			<a href="">
-				<img src="" alt="">
-				Notizie Post
+		<h1 class="logo_s_l">
+			<a class="logo__link" href="#">
+				<img class="logo__img" src="{{root}}assets/img/notizie-post-logo-1.png" alt="" >
 			</a>
 		</h1>
 	</div>
 
+	<!-- Header Breakig News hdr__b-news -->
+	<div class="hdr__b-news">
+		<article class="b-news">
+			<h3></h3>
+		</article>
+	</div>
 </header>
