--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -6,21 +6,21 @@
 		<article class="b-news">
 			<a href="#" class="b-news__link">
 				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in metus sed....</p>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 			</a>
 		</article>
 
 		<article class="b-news">
 			<a href="#" class="b-news__link">
 				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in metus sed...</p>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 			</a>
 		</article>
 
 		<article class="b-news">
 			<a href="#" class="b-news__link">
 				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in metus sed...</p>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 			</a>
 		</article>
 	</section>
