--- a/src/partials/notizie-header.html
+++ b/src/partials/notizie-header.html
@@ -5,12 +5,14 @@
 	<div class="hdr__top">
 		<div class="hdr__date">
 			<div class="date">
-				<time class="date__time">Wednesday, January 11, 2017</time>
+				<time class="date__time"><span class="hfso">Wednesday, </span>January 11, 2017</time>
 			</div>
 		</div>
 		
 		<div class="hdr__eyelash">
-			
+			<ul class="menu menu_type_icon">
+				<li><a href="#"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a></li>
+			</ul>
 		</div>
 		
 	</div>
@@ -21,7 +23,7 @@
 	<div class="hdr__social">
 		<div class="hdr__weather">
 			<div class="weather">
-				<i class="fa fa-cloud" aria-hidden="true"></i> 16°C Guadalupe Zac				
+				<i class="fa fa-cloud" aria-hidden="true"></i> 16°C<span class="hfso"> Guadalupe. Zac.</span>
 			</div>
 		</div>
 		<div class="hdr__social-icons">
@@ -45,5 +47,4 @@
 			</a>
 		</h1>
 	</div>
-
 </header>
