--- a/src/partials/notizie-slider.html
+++ b/src/partials/notizie-slider.html
@@ -10,7 +10,7 @@
     </li>
     <li class="orbit-slide">
       <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
-      <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+      <figcaption class="orbit-caption"><h1>Lets Rocket!</h1></figcaption>
     </li>
     <li class="orbit-slide">
       <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
