--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -11,12 +11,15 @@
 			height: 60px;
 			@include grid-col;
 			@include breakpoint(small){
-				@include grid-col-size(4);
+				height: 40px;
+				padding-left: 0;				
+				@include grid-col-size(8);
 			}
 			@include breakpoint(medium){
+				height: 60px;
 				padding-left: 0;
-				@include grid-col-size(4);
-			}			
+				@include grid-col-size(8)
+			}
 			@include flex;
 			@include flex-align(justify);
 			.date{
@@ -31,8 +34,14 @@
 			height: 60px;
 			@include grid-col;
 			@include breakpoint(small){
+				height: 40px;
+				@include grid-col-size(4);
+			}
+			@include breakpoint(medium){
+				height: 60px;
 				@include grid-col-size(3);
 			}
+			@include flex;					
 		}
 	}
 
@@ -45,15 +54,14 @@
 				@include grid-col-size(6);
 			}
 			@include breakpoint(medium){
-				padding-left: 0;
 				@include grid-col-size(6);
-			}			
+			}
 
 		}
 		.hdr__social-icons{
 			@include grid-col;
 			@include breakpoint(small){
-				@include grid-col-size(3);
+				@include grid-col-size(3);				
 			}
 			@include breakpoint(medium){
 				@include grid-col-size(3);
