09 Slider con mejoras. necesita mas

--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -5,22 +5,22 @@
 	<section class="cnt__b-news">
 		<article class="b-news">
 			<a href="#" class="b-news__link">
-				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+				<h2 class="b-news__header">Breaking News</h2>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
 			</a>
 		</article>
 
 		<article class="b-news">
 			<a href="#" class="b-news__link">
-				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+				<h2 class="b-news__header">Breaking News</h2>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
 			</a>
 		</article>
 
 		<article class="b-news">
 			<a href="#" class="b-news__link">
-				<h5 class="b-news__header">Breaking News</h5>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+				<h2 class="b-news__header">Breaking News</h2>
+				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
 			</a>
 		</article>
 	</section>
