10 Ajustes en b-news y orbit

--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -1,29 +1,7 @@
 <!-- Content (cnt) -->
 <section class="cnt">
 	
-	<!-- Breaking news -->
-	<section class="cnt__b-news">
-		<article class="b-news">
-			<a href="#" class="b-news__link">
-				<h2 class="b-news__header">Breaking News</h2>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
-			</a>
-		</article>
-
-		<article class="b-news">
-			<a href="#" class="b-news__link">
-				<h2 class="b-news__header">Breaking News</h2>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
-			</a>
-		</article>
-
-		<article class="b-news">
-			<a href="#" class="b-news__link">
-				<h2 class="b-news__header">Breaking News</h2>
-				<p class="b-news__excerpt hfso">Lorem ipsum dolor sit amet, consectetur...</p>
-			</a>
-		</article>
-	</section>
+	{{> notizie-breaking}}
 
 	<hr class="divider_l_1">
 	
