--- a/src/partials/notizie-slider.html
+++ b/src/partials/notizie-slider.html
@@ -1,39 +1,35 @@
 <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
   <ul class="orbit-container">
     <button class="orbit-previous">
-      <span class="show-for-sr">Previous Slide</span><i class="fa fa-arrow-left" aria-hidden="true"></i>
+      <span class="show-for-sr">Previous Slide</span>
+      <i class="fa fa-arrow-left" aria-hidden="true"></i>
     </button>
     <button class="orbit-next">
-      <span class="show-for-sr">Next Slide</span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+      <span class="show-for-sr">Next Slide</span>
+      <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </button>
-    <!--li class="is-active orbit-slide">
-    	<a href="#">
-	      <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
-	      <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
-    	</a>
-    </li-->
+    
     <li class="orbit-slide">
       <a href="#">
         <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
-        <figcaption class="orbit-caption">
-            <h1>Lets Rocket!. Space, the final frontier.</h1>
-            <span>Business</span>
-        </figcaption>      
       </a>
-    </li>
+      <figcaption class="orbit-caption">
+          <a href="#"><h1>Lets Rocket!. Space, the final frontier.</h1></a>
+          <a href="#"><span>Business</span></a>
+      </figcaption>
+    </li>    
     <li class="orbit-slide">
-      <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
-      <figcaption class="orbit-caption">Encapsulating</figcaption>
-    </li>
-    <li class="orbit-slide">
-      <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
-      <figcaption class="orbit-caption">Outta This World</figcaption>
+      <a href="#">
+        <img class="orbit-image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="Space">
+      </a>
+      <figcaption class="orbit-caption">
+          <a href="#"><h1>Lets Rocket!. Space, the final frontier.</h1></a>
+          <a href="#"><span>Business</span></a>
+      </figcaption>
     </li>
   </ul>
-  <!--nav class="orbit-bullets">
-    <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-    <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-  </nav-->
+</div>
+
+<div class="row column">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse totam, iusto alias perspiciatis sit fugiat rerum, excepturi aliquam ducimus laborum et amet ab unde. Quas nulla assumenda et ratione minima.
 </div>
