--- a/src/assets/scss/body.scss
+++ b/src/assets/scss/body.scss
@@ -13,6 +13,8 @@
 			@include grid-col;
 			@include breakpoint(small){
 				@include grid-col-size(12);
+				/*@include flex;
+				@include flex-align(center);*/
 			}
 			@include breakpoint(medium){
 				@include grid-col-size(4);
