11 Trazado de Noticias 3. cols

--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -7,4 +7,12 @@
 	
 	{{> notizie-slider}}
 
+	<div style="background-color: grey; margin-top: 1rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptate iste maiores aliquam ad, ducimus laudanstium, id vero, aliquid inventore aut rerum deserunt quia similique architecto saepe ut corporis iure!</div>
+	
+	<div class="row">
+		<div class="column large-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore odio laboriosam consectetur temporibus dicta totam fugit magnam explicabo, fuga soluta doloribus. Id sed mollitia iure hic magni veniam laborum aliquid!</div>
+		<div class="column large-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum impedit cupiditate ea sequi reiciendis. Recusandae quibusdam dicta, fuga, illum commodi distinctio? Ex ipsam, hic illum in et temporibus quas veritatis!</div>
+		<div class="column large-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora voluptas ipsam consectetur adipisci minima aspernatur perspiciatis corrupti quisquam dolor et? Impedit, voluptatibus. Obcaecati aut libero et! Distinctio quia, atque commodi.</div>
+	</div>
+
 </section>
