--- a/src/partials/notizie-slider.html
+++ b/src/partials/notizie-slider.html
@@ -1,3 +1,4 @@
+<!-- Slider -->
 <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
   <ul class="orbit-container">
     <button class="orbit-previous">
@@ -27,9 +28,6 @@
           <a href="#"><span>Business</span></a>
       </figcaption>
     </li>
+    <hr>   
   </ul>
-</div>
-
-<div class="row column">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse totam, iusto alias perspiciatis sit fugiat rerum, excepturi aliquam ducimus laborum et amet ab unde. Quas nulla assumenda et ratione minima.
 </div>
