--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -10,3 +10,6 @@
 	{{>notizie-news-home}}
 
 </section>
+
+<hr class="divider_l_0">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laudantium et ipsa non, veniam ullam id modi, iure possimus, doloremque recusandae soluta hic necessitatibus cumque, asperiores ad magni voluptatibus. Voluptas.
