--- a/src/partials/notizie-news-home.html
+++ b/src/partials/notizie-news-home.html
@@ -1,12 +1,18 @@
 <!-- Content News (cnt__news)-->
 <section class="cnt__news">	
 	<div class="news__home">
-		<article>
-			<figure>
-				<img src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
+		<article class="post-home">
+			<figure class="post-home__figure">
+				<img class="post-home__img" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
 			</figure>
-			<h2>Lorem Ipsum Dolor</h2>
-			<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corporis officia delectus, non doloremque sint quae magni numquam ullam quaerat suscipit maiores facilis, sit debitis autem recusandae illo aliquid vel?. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, nostrum explicabo commodi aliquid quis ipsam sit, cum in distinctio nihil obcaecati. Autem cumque iure, repudiandae hic dolore! Dolores, adipisci, cupiditate!</p>
+			<h2 class="post-home__title">Lorem Ipsum Dolor</h2>
+			<div class="post-home__meta">
+				Bussiness
+			</div>
+			<div class="post-home__category">
+				Bussiness
+			</div>			
+			<p class="post-home__exerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corporis officia delectus, non doloremque sint quae magni numquam ullam quaerat suscipit maiores facilis, sit debitis autem recusandae illo aliquid vel?. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, nostrum explicabo commodi aliquid quis ipsam sit, cum in distinctio nihil obcaecati. Autem cumque iure, repudiandae hic dolore! Dolores, adipisci, cupiditate!</p>
 		</article>
 	</div>
 	<div class="news__home">
@@ -21,5 +27,7 @@
 				</figure>
 		</article>			
 	</div>
-	<aside class="news__sidebar"><p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam cum rerum sed nostrum corporis officia ullam aspernatur atque voluptatibus sit, laborum, ad saepe architecto deserunt eius ex nam, iusto tempora.</p></aside>
+	<aside class="news__sidebar">
+		<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam cum rerum sed nostrum corporis officia ullam aspernatur atque voluptatibus sit, laborum, ad saepe architecto deserunt eius ex nam, iusto tempora.</p>		<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam cum rerum sed nostrum corporis officia ullam aspernatur atque voluptatibus sit, laborum, ad saepe architecto deserunt eius ex nam, iusto tempora.</p>		<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam cum rerum sed nostrum corporis officia ullam aspernatur atque voluptatibus sit, laborum, ad saepe architecto deserunt eius ex nam, iusto tempora. laborum, ad saepe architecto deserunt eius ex nam, iusto tempora. laborum, ad saepe architecto deserunt eius ex nam, iusto tempora.</p>
+	</aside>
 </section>
