--- a/src/partials/notizie-news-home.html
+++ b/src/partials/notizie-news-home.html
@@ -14,7 +14,7 @@
 				By: <a href="#">Monsieour Le Chifié</a> 
 				Date: Jan 25 2017
 			</div>			
-			<p class="post-home__exerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquid, praesentium soluta. Consectetur dolore, delectus suscipit ratione libero repellendus quam, dignissimos praesentium, perferendis facere nobis in culpa, perspiciatis assumenda? Nesciunt!</p>
+			<p class="post-home__exerpt">Nullam eget placerat tellus. Pellentesque a libero nec elit fringilla semper. In sit amet velit sed felis lacinia condimentum dignissim a risus. Aliquam molestie auctor odio, ut maximus nibh efficitur.</p>
 		</article>
 	</div>
 	<div class="news__home">
@@ -28,7 +28,7 @@
 				By: <a href="#">Monsieour Le Chifié</a> 
 				Date: Jan 25 2017
 			</div>			
-			<p class="post-home__exerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquid, praesentium soluta. Consectetur dolore, delectus suscipit ratione libero repellendus quam, dignissimos praesentium, perferendis facere nobis in culpa, perspiciatis assumenda? Nesciunt!</p>
+			<p class="post-home__exerpt">Nullam eget placerat tellus. Pellentesque a libero nec elit fringilla semper. In sit amet velit sed felis lacinia condimentum dignissim a risus. Aliquam molestie auctor odio, ut maximus nibh efficitur.</p>
 		</article>
 		<article class="post-home">
 			<h2 class="post-home__title">Lorem Ipsum Dolor</h2>
