--- a/src/partials/notizie-breaking.html
+++ b/src/partials/notizie-breaking.html
@@ -3,37 +3,34 @@
 	
 	<article class="b-news">
 		<a href="#" class="b-news__link">
-			<h2 class="b-news__header">Lorem ipsum dolor sit amet</h2>
+			<h2 class="b-news__header">Suspendisse potenti. Aenean odio velit, porttitor pulvinar...</h2>
 		</a>
-		<div class="b-news__categories">
-			<a class="b-news__category" href="#">Business</a> - 
-			<a class="b-news__category" href="#">Culture</a> -
-			<a class="b-news__category" href="#">Politic</a>	
-		</div>
-		<a href="#">
-			<span class="secondary badge"><i class="fa fa-arrow-right fa-lg"></i></span>
-		</a>
+		<ul class="b-news__categories">
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Business</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Culture</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Politic</a></li>
+		</ul>
 	</article>
 
 	<article class="b-news">
 		<a href="#" class="b-news__link">
-			<h2 class="b-news__header">Lorem ipsum dolor sit amet</h2>
+			<h2 class="b-news__header">Suspendisse potenti. Aenean odio velit, porttitor pulvinar...</h2>
 		</a>
-		<div class="b-news__categories">
-			<a class="b-news__category" href="#">Business</a> - 
-			<a class="b-news__category" href="#">Culture</a> -
-			<a class="b-news__category" href="#">Politic</a>			
-		</div>
+		<ul class="b-news__categories">
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Business</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Culture</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Politic</a></li>
+		</ul>
 	</article>
 
 	<article class="b-news">
 		<a href="#" class="b-news__link">
-			<h2 class="b-news__header">Lorem ipsum dolor sit amet</h2>
+			<h2 class="b-news__header">Suspendisse potenti. Aenean odio velit, porttitor pulvinar...</h2>
 		</a>
-		<div class="b-news__categories">
-			<a class="b-news__category" href="#">Business</a> - 
-			<a class="b-news__category" href="#">Culture</a> -
-			<a class="b-news__category" href="#">Politic</a>			
-		</div>
+		<ul class="b-news__categories">
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Business</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Culture</a></li>
+			<li class="b-news__category"><a class="b-news__category-link" href="#">Politic</a></li>
+		</ul>
 	</article>
 </section>
