--- a/src/partials/notizie-header.html
+++ b/src/partials/notizie-header.html
@@ -28,13 +28,13 @@
 		</div>
 		<div class="hdr__social-icons">
 			<ul class="menu menu_type_social">
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 			</ul>			
 		</div>
 	</div>
