--- a/src/partials/notizie-body.html
+++ b/src/partials/notizie-body.html
@@ -7,9 +7,9 @@
 	
 	{{> notizie-slider}}
 
-	{{>notizie-news-home}}
+	<!--  { { > notizie-news-home } } -->
 
 </section>
 
 <hr class="divider_l_0">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laudantium et ipsa non, veniam ullam id modi, iure possimus, doloremque recusandae soluta hic necessitatibus cumque, asperiores ad magni voluptatibus. Voluptas.
+<!-- Start Element Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laudantium et ipsa non, veniam ullam id modi, iure possimus, doloremque recusandae soluta hic necessitatibus cumque, asperiores ad magni voluptatibus. Voluptas. -->
