--- a/src/partials/notizie-breaking.html
+++ b/src/partials/notizie-breaking.html
@@ -12,25 +12,22 @@
 		</ul>
 	</article>
 
-	<article class="b-news">
+	<article class="b-news hfso">
 		<a href="#" class="b-news__link">
-			<h2 class="b-news__header">Suspendisse potenti. Aenean odio velit, porttitor pulvinar...</h2>
+			<h2 class="b-news__header">Sed pretium nisl sollicitudin mattis pretium. Pellentesque...</h2>
 		</a>
 		<ul class="b-news__categories">
 			<li class="b-news__category"><a class="b-news__category-link" href="#">Business</a></li>
-			<li class="b-news__category"><a class="b-news__category-link" href="#">Culture</a></li>
-			<li class="b-news__category"><a class="b-news__category-link" href="#">Politic</a></li>
 		</ul>
 	</article>
 
-	<article class="b-news">
+	<article class="b-news hfso">
 		<a href="#" class="b-news__link">
-			<h2 class="b-news__header">Suspendisse potenti. Aenean odio velit, porttitor pulvinar...</h2>
+			<h2 class="b-news__header">Ut tincidunt, turpis id egestas faucibus, sem nisi...</h2>
 		</a>
 		<ul class="b-news__categories">
 			<li class="b-news__category"><a class="b-news__category-link" href="#">Business</a></li>
 			<li class="b-news__category"><a class="b-news__category-link" href="#">Culture</a></li>
-			<li class="b-news__category"><a class="b-news__category-link" href="#">Politic</a></li>
 		</ul>
 	</article>
 </section>
