--- a/src/partials/notizie-news-home.html
+++ b/src/partials/notizie-news-home.html
@@ -1,6 +1,6 @@
 <!-- Content News (cnt__news)-->
 <section class="cnt__news">	
-	<div class="news__home">
+	<div class="news__home news__home_left">
 		<article class="post-home">
 			<figure class="post-home__figure">
 				<img class="post-home__img" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
@@ -17,7 +17,7 @@
 			<p class="post-home__exerpt">Nullam eget placerat tellus. Pellentesque a libero nec elit fringilla semper. In sit amet velit sed felis lacinia condimentum dignissim a risus. Aliquam molestie auctor odio, ut maximus nibh efficitur.</p>
 		</article>
 	</div>
-	<div class="news__home">
+	<div class="news__home news__home_right">
 		<article class="post-home">
 			<h2 class="post-home__title">Lorem Ipsum Dolor</h2>
 			<ul class="post-home__categories">
