--- a/src/partials/notizie-slider.html
+++ b/src/partials/notizie-slider.html
@@ -14,9 +14,9 @@
     <li class="orbit-slide">
       <article class="slide__article">
         <figure class="slide__figure">
-          <img class="slide__image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
+          <a href="#" class="slide__image-link"><img class="slide__image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt=""></a>
           <figcaption class="slide__caption">
-            <h1 class="slide__title">Lorem ipsum dolor sit amet, consectetur quae adipisicing elit...</h1>
+            <a href="#" class="slide__title-link"><h1 class="slide__title">Lorem ipsum dolor sit amet, consectetur quae adipisicing elit...</h1></a>
           </figcaption>
         </figure>
         <div class="slide__excerpt">
