--- a/src/partials/notizie-slider.html
+++ b/src/partials/notizie-slider.html
@@ -11,6 +11,7 @@
       <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </button>  
     
+    {{#repeat 3}}
     <li class="orbit-slide">
       <article class="slide__article">
         <figure class="slide__figure">
@@ -31,26 +32,7 @@
         </div>
       </article>
     </li>
-    <li class="orbit-slide">
-      <article class="slide__article">
-        <figure class="slide__figure">
-          <img class="slide__image" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
-          <figcaption class="slide__caption">
-            <h1 class="slide__title">Lorem ipsum dolor sit amet, consectetur quae adipisicing elit...</h1>
-          </figcaption>
-        </figure>
-        <div class="slide__excerpt">
-          <a href="#" class="slide__category">Business</a>, 
-          <a href="#" class="slide__category">World</a>
-          <span class="slide__meta">
-            By: <a href="#" class="slide__author">Monsieour le Chifie</a>, September 29 1988
-          </span>
-          <p class="slide__excerpt-content hfso">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum consequatur reiciendis eum quae ipsam eaque rem...
-          </p>
-        </div>
-      </article>
-    </li>    
+    {{/repeat}}
 
   </ul>
 </div>
