21 Mejora en personalizacion de fuentes post home

--- a/src/assets/scss/body.scss
+++ b/src/assets/scss/body.scss
@@ -27,7 +27,7 @@
 				text-align: left;
 			}
 			.b-news__link{
-				color: $notizie-pri-text-color;
+				color: $black;
 				&:hover {
 					color: $notizie-pri-color-dark;
 				}
@@ -99,7 +99,7 @@
 		padding: .8rem 1rem;
 	}
 		.slide__category{
-		margin-left: 0;
+			margin-left: 0;
 			font-size: .9rem;
 			font-weight: 700;
 			color: $black;
@@ -187,16 +187,24 @@
 					color: $notizie-pri-color-dark;
 				}				
 			}
-				.post-home__title{@include border;
+				.post-home__title{
+					//@include border;
 					font-family: 'Playfair Display', serif;
 					font-weight: 900;
-					font-size: 1.6rem;
+					font-size: 1.4rem;
+					//text-transform: uppercase;
 				}
 			.post-home__categories{
 				margin-left: 0;
 				.post-home__category{
+					font-size: .9rem;
+					font-weight: 700;
 					list-style: none;
 					display: inline;
+					color: $black;
+					&:hover{
+						color: $notizie-pri-color-dark;
+					}
 				}
 			}
 			.post-home__meta{
@@ -205,6 +213,9 @@
 			}
 			.post-home__exerpt{
 				text-align:justify;
+				font-family: 'Merriweather', serif;
+				font-size: .9rem;
+				font-weight: 300;
 			}
 		}
 
